--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -31,7 +31,7 @@
   }
   
   .heroes button:active {
-    background-color: #525252;
+    background-color: #493a43;
     color: #fafafa;
   }
   
@@ -41,7 +41,7 @@
   }
   
   .heroes button.selected:hover {
-    background-color: #505050;
+    background-color: #6b5361;
     color: white;
   }
   
@@ -55,7 +55,7 @@
     font-size: small;
     color: white;
     padding: 0.8em 0.7em 0 0.7em;
-    background-color: #405061;
+    background-color: #7a0f4a;
     line-height: 1em;
     margin-right: .8em;
     border-radius: 4px 0 0 4px;
