--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,20 +1,14 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
-  <li *ngFor="let hero of heroes">
-    <button [class.selected]="hero === selectedHero" type="button" (click)="onSelect(hero)">
-      <span class="badge">{{hero.id}}</span>
-      <span class="name">{{hero.name}}</span>
+  <li *ngFor="let hero2 of heroes">
+    <button [class.selected]="hero2 === selectedHero" type="button" (click)="onSelect(hero2)">
+      <span class="badge">{{hero2.id}}</span>
+      <span class="name">{{hero2.name}}</span>
     </button>
   </li>
 </ul>
-<div *ngIf="selectedHero">
-    <h2>{{selectedHero.name | uppercase}} Details</h2>
-    <div>id: {{selectedHero.id}}</div>
-    <div>
-      <label for="hero-name">Hero name: </label>
-      <input id="hero-name" [(ngModel)]="selectedHero.name" placeholder="name">
-    </div>
-  </div>
+
+<techstarter-hero-detail [hero]="selectedHero"></techstarter-hero-detail>
 
 
 <!-- old: first steps
