--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 /* Application-wide Styles */
 h1 {
-    color: #369;
+    color: #7a0f4a;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 250%;
   }
   h2, h3 {
-    color: #444;
+    color: #6b5361;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
   }
