--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,14 +1,24 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
   <li *ngFor="let hero2 of heroes">
+    <a routerLink="/detail/{{hero2.id}}">
+      <span class="badge">{{hero2.id}}</span> {{hero2.name}}
+    </a>
+  </li>
+</ul>
+
+
+
+<!-- <ul class="heroes">
+  <li *ngFor="let hero2 of heroes">
     <button [class.selected]="hero2 === selectedHero" type="button" (click)="onSelect(hero2)">
       <span class="badge">{{hero2.id}}</span>
       <span class="name">{{hero2.name}}</span>
     </button>
   </li>
-</ul>
+</ul> -->
 
-<techstarter-hero-detail [hero]="selectedHero"></techstarter-hero-detail>
+<!-- <techstarter-hero-detail [hero]="selectedHero"></techstarter-hero-detail> -->
 
 
 <!-- old: first steps
